2007-03-16  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* indCIMXMLExport.c: 
	Fixed 1682045: compile failure with gcc 4.1.3

	* providerMgr.c: 
	Fixed 1677195: crash in provider manager trace on x86_64.

	* cimcClientSfcbLocal.c, constClass.c, constClass.h, instance.c: 
	Implemented 1443861: support for local clients.
	It was necessary to implement invokeMethod and
	cleanup the cimcClientSfcbLocal.c file. Further, the function table
	of constClass needed to be adjusted and some qualifier related
	functions needed to be implemented.
	As the instance function table was incompatible with the cimc
	definition, it needs to be switched during run time.

2007-03-09  Sven Schuetz

	* cimXmlOps.y:
	Fixed 1677445: Problems with instance references as method parameter

2007-03-09  Chris Buccella  

	* httpAdapter.c, configure.ac, README
	Fixed 1672704: IPv6 support.  This is a configure option.
	Enabling this feature without having an IPv6 address available
	will default to IPv4.

2007-03-06  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* queryStatement.c, queryParser.y: 
	Fixed 1674999: fixed memory corruption and leak in query statement.

2007-03-05  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* queryLexer.l:
	Fixed 1370752: added single quotes to lexer definition.

	* predicate.c, providerDrv.c, queryOperation.c, selectexp.c,
	subcond.c:
	Fixed 1370764: parser unstable after syntax error.

2007-03-01  Tyrel Datwyler <tyreld@us.ibm.com>

	* sfcb-dox.conf.in, configure.ac, Makefile.am, support.h, support.c
	Partially fixed 1672034: Added support for documentation generation, 
	and initial documentation of memory managment facilities. 

2007-03-01  Sven Schuetz

	* instance.c, providerRegister.c, interopProvider.c, queryStatement.c:
	Fixed 1668852: memory leak in interop provider
	
	* cimXmlRequest.c, instance.c:
	Fixed 1654313: http adapter segfaults on createinstance
