@@ -1,7 +1,7 @@
 /*
- * instance.c
+ * $Id$
  *
- * (C) Copyright IBM Corp. 2005
+ * © Copyright IBM Corp. 2005, 2007
  *
  * THIS FILE IS PROVIDED UNDER THE TERMS OF THE ECLIPSE PUBLIC LICENSE
  * ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THIS FILE
@@ -241,7 +241,7 @@ static CMPIStatus __ift_setProperty(CMPIInstance * instance,
 	 data.value.chars=NULL;
       }
    } else if (value) {
-      data.value = *value;
+      sfcb_setAlignedValue(&data.value,value,type);
    }
 
    if (((type & CMPI_ENCA) && data.value.chars == NULL) || value == NULL) {
